# qmk-rs

./: .gitignore  Makefile  build.sh  log.txt  test.txt
builddefs/: common_rules.mk
incim_testing/: Cargo.toml
incim_testing/src/: main.rs
include_image/: Cargo.toml
include_image/src/: lib.rs
include_image_structs/: Cargo.toml
include_image_structs/src/: lib.rs
keyboards/sofle/keymaps/nulls_keymap/: .gitignore  config.h  glcdfont.c  keymap.c  keymap.json  rules.mk  rust_bindings.c
keyboards/sofle/rev1/: keyboard.json
modules/nullptr/oxide/: qmk_module.json  rules.mk
qmk_macro/: Cargo.toml
qmk_macro/src/: lib.rs
quantum/: action.h  eeconfig.h  quantum.h  quantum_keycodes.h
quantum/led_matrix/: led_matrix.c
quantum/rgb_matrix/: rgb_matrix.c  rgb_matrix.h
quantum/rgblight/: rgblight.c  rgblight.h
rust/: .gitignore  Cargo.toml  Makefile  build_wasm.sh  panic.sh
rust/crates/include_image/: Cargo.toml
rust/crates/include_image/src/: lib.rs
rust/crates/include_image_macro/: Cargo.toml
rust/crates/include_image_macro/src/: lib.rs
rust/crates/include_image_structs/: Cargo.toml
rust/crates/include_image_structs/src/: alpha.rs  lib.rs  opaque.rs  qmk_image.rs
rust/crates/keymap/: Cargo.toml  build.rs
rust/crates/keymap/src/: cat.rs  config.rs  heap.rs  image.rs  init.rs  input.rs  keymap.rs  lib.rs  oled.rs  page.rs  random.rs  screen.rs  state.rs
rust/crates/keymap/src/animation/: mod.rs
rust/crates/keymap/src/pages/: boot.rs  clock.rs  colour.rs  debug.rs  hello_world.rs  home.rs  info.rs  mod.rs  mode_7.rs  rgb.rs  startup.rs  transition.rs
rust/crates/keymap/src/pages/components/: mod.rs  selectable_list.rs
rust/crates/keymap/src/pages/settings/: mod.rs  startup.rs  transition.rs
rust/crates/keymap/src/pages/transition/: dither.rs  doom.rs  drop.rs  mod.rs  none.rs  scale.rs
rust/crates/layout_inspect/src/: defs.rs  impls.rs  lib.rs
rust/crates/layout_inspect/tests/: others.rs
rust/crates/layout_inspect_derive/: Cargo.toml
rust/crates/panic_send/: Cargo.toml
rust/crates/panic_send/src/: lib.rs
rust/crates/qmk/: Cargo.toml
rust/crates/qmk/src/: eeconfig.rs  framebuffer.rs  keyboard.rs  keys.rs  lib.rs  logging.rs  rect.rs  rgb.rs  screen.rs  sys.rs
rust/crates/qmk_callback/: Cargo.toml
rust/crates/qmk_callback/src/: lib.rs
rust/crates/qmk_callback_parsing/: Cargo.toml
rust/crates/qmk_callback_parsing/src/: lib.rs
rust/crates/qmk_macro/: Cargo.toml
rust/crates/qmk_macro/src/: keymap.rs  lib.rs
rust/crates/qmk_sys/: Cargo.toml  build.rs
rust/crates/qmk_sys/src/: lib.rs
rust/src/: abstractions.rs  animate.rs  debug.rs  heap.rs  hid.rs  image.rs  key.rs  keyboard.rs  keymap.rs  lib.rs  macros.rs  random.rs  rotary_encoder.rs  screen.rs  scroll.rs  state.rs
rust/src/minigames/: game.rs  mod.rs
rust/src/minigames/flappy_bird/: bird.rs  mod.rs  pipe.rs
rust/src/minigames/raycast/: mod.rs
rust/src/minigames/tetris/: bricks.rs  config.rs  game.rs  mod.rs  record.rs
rust/src/raw_c/: mod.rs
