[workspace]
resolver = "2"
members = [
    "crates/include_image_macro",
    "crates/include_image_structs",
    "crates/include_image",
    "crates/keymap",
    "crates/qmk_callback",
    "crates/qmk_macro",
    "crates/qmk_callback_parsing",
    "crates/qmk_sys",
    "crates/qmk",
    "crates/layout_inspect",
    "crates/layout_inspect_derive",
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
