[package]
name = "keymap"
version = "0.1.0"
edition = "2024"

[lib]
name = "keymap"
crate-type = ["staticlib"]
path = "src/lib.rs"


[dependencies]
embedded-alloc = "0.6.0"
include-image = { path = "../include_image" }
panic-halt = "1.0.0"
rp2040-hal = { version = "0.11.0", features = ["critical-section-impl"] }
qmk = { path = "../qmk" }
critical-section = "1.2.0"
once_cell = { version = "1.21.1", default-features = false, features = [
    "alloc",
    "critical-section",
    "atomic-polyfill",
] }
micromath = "2.1.0"
rp2040-panic-usb-boot = "0.6.0"
paste = "1.0.15"

[target.thumbv6m-none-eabi.dependencies]
portable-atomic = { version = "1.8", features = ["unsafe-assume-single-core"] }

[build-dependencies]
qmk-callback = { path = "../qmk_callback" }
