[package]
name = "qmk"
version = "0.1.0"
edition = "2024"

[dependencies]
num-traits = { version = "0.2.19", default-features = false }
qmk-macro = { path = "../qmk_macro" }
include-image = { path = "../include_image" }
micromath = "2.1.0"
rust_decimal_macros = "1.36.0"
fixed = "1.29.0"
qmk-sys = { path = "../qmk_sys" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.77", features = ["Window", "Storage", "console"] }
js-sys = "0.3.77"
serde = "1.0.219"
serde_json = "1.0.140"
